<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能交通_王鹏飞</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_str">欢迎体验</string>
    <string name="default_title">默认标题</string>
    <string name="car_action_str">小车启停控制</string>
    <string name="car_speed_str">小车速度查询</string>
    <string name="car_account_str">小车账户管理</string>
    <string name="select_carid_str">请选择小车编号(1~4)</string>
    <string name="select_action_str">请选择小车动作</string>
    <string name="select_btn_str">设置</string>
    <string name="search_btn_Str">查询</string>
    <string name="select_spinner_dialog_promat">请选择</string>
    <string name="carspeeds_mag_str">第%1$s号小车的当前速度为：%2$s公里/小时</string>
    <string name="car_recharge_strs">充值</string>
    <string name="car_search_YE_str">查询账户余额</string>
    <string name="car_search_record_str">充值记录查询</string>
    <string name="car_show_JE_str">%1$s元</string>
    <string name="car_recharge_JE_str">充值金额：</string>
    <string name="car_account_YE_str">账户余额：</string>
    <string name="car_recharge_acount_str">车辆账户充值</string>
    <string name="car_id_account_str">小车编号:</string>
    <string name="car_show_JE_str2">元</string>
    <string name="car_recharge_cancel_str">取消</string>
	<string name="return_str">返回</string>
    
	<string name="record_item_carid_str">小车编号</string>
	<string name="record_item_JE_str">充值金额</string>
	<string name="record_item_YE_str">账户余额</string>
	<string name="record_item_date_str">充值日期</string>

		<string name="no_recharge_record">暂无充值历史记录</string>
		
		
		<string name="select_regulation_tv_str">选择排序规则</string>
		<string name="sort_btn_str">设置</string>
		<string name="light_id_tv_str">路口编号</string>
		<string name="red_light_tv_str">红灯</string>
		<string name="yellow_light_tv_str">黄灯</string>
		<string name="green_light_tv_str">绿灯</string>
		
		<string name="search_envi_str">交通环境</string>
		<string name="pm2.5_tv_str">Pm2.5 </string>
		<string name="co2_tv_str"> CO2</string>
		<string name="temprature_tv_str">温度</string>
		<string name="humidity_tv_str">湿度</string>
		
		<string name="lightintensity_tv_str">光照强度</string>
		<string name="life_indicator_str">生活指南</string>
		
		<!--空气指数  -->
		<string name="air_title"> 空气指数</string> 
		<string name="air_tip1">空气质量非常好，非常\n适合户外活动，趁机出\n去多呼吸新鲜空气</string> 
		<string name="air_tip2 ">易感人群应\n适当减少室\n外活动</string>
		<string name="air_tip3">空气质量差， 不适合户\n外活动</string>
		<string name= "air_levell ">优(81$s)</string>
		<string name="air_level2">良 (818s)</string> 
		<string name="air_level3">污染(81$s)</string>
		  <!--运动指数 -->  
		<string name= "sport_title">运动指数</string>
		<string name= "sport_tip1"> 气候适宜，推荐您进\n行户外运动</string>
		<string name= "sport_tip2 ">易感人群应\n适当减少室\n外活动</string>
		<string name= "sport_tip3">空气氧气含量低， 请在\n室内进行休闲运动</string>
		<string name= "sport_levell">适宜 (81$s) </string>
		<string name= "sport_level2">中 (81$s)</string>
		<string name="sport_leve13">较不宜 (81$s)</string>
		<!--感冒指数  -->
		<string name="temp_title">感冒指数</string>
		<string name= "temp_tip1">温度低，风较大，较易发生\n感冒，注意防护</string>
		<string name= "temp_tip2"> 无明显降温，感冒机率\n较低</string>
		<string name= "temp_levelI ">较易发(81$s)</string>
		<string name="temp_leve12">少发 (81$s) </string>
		<!-- 穿衣指数 -->
		 <string name= "clothes_title"> 穿衣指数</string>
		 <string name= "clothes_tip1 ">建议穿长袖衬\n衫、单裤等服装</string>
		 <string name= "clothes_tip2">建议穿短袖衬衫、单裤等\n服装</string>
		 <string name= "clothes_tip3">适合穿 T恤、短薄外套\n等夏季服装</string>
		 <string name= "clothes_levell ">冷(81$s)</string>
		 <string name= "clothes_level2">舒适 (81$s)</string>
		 <string name= "clothes_level3">热(1$s)</string>
		<!--紫外线指数-->
		 <string name= "sunlight_title"> 紫外线指数</string>
		 <string name= "sunlight_tipl ">辐射较弱，涂擦\nSPF12~15、PA+护肤品</string>
		 <string name= "sunlight_tip2">涂擦 SPE大于15、\nPA+防晒护肤品"</string>
		 <string name= "sunlight_tip3"> 尽量减少外出，需要涂\n抹高倍数防晒霜</string>
		 <string name= "sunlight_level1">弱(81$s)</string>
		 <string name= "sunlight_leve12">中等 (号1$s) </string>
		 <string name= "sunlight_level3">强 (81$s)</string>   
		
		
	<!--停车场管理字符串定义-->
	<string name="setparkrate_str">停车场费率设置</string>	
	<string name="searchparkrate_str">停车场费率查询</string>
	<string name="searchparkfree_str">空车位查询</string>
	<string name="selectratetype_str">选择费率类型</string>
	<string name="ratejine_str">费率金额(0-99)</string>
		
	<string name="Select_RoadId_str">选择道路编号</string>
	
	

</resources>




























