<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_marginTop="10dp">
       
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/select_regulation_tv_str"
		    android:textSize="20sp"/>

		<Spinner
		   android:id="@+id/select_regular_spinner"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:entries="@array/regular_spinner_str" />
		<Button
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:id="@+id/sort_btn"
		   android:text="@string/sort_btn_str"
		   android:textSize="20sp"/>
</LinearLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ff000000"
        android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"/>
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
		
<View 
    android:layout_width="1dp"
    android:layout_height="match_parent"
    android:background="#ff000000"/>

<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/light_id_tv_str"
    android:textSize="20sp"
    android:layout_weight="1"
    android:gravity="center"/>

<View 
    android:layout_width="1dp"
    android:layout_height="match_parent"
	android:background="#ff000000"/>

<TextView
    android:layout_width="0dp"
	android:layout_height="wrap_content"
	android:text="@string/red_light_tv_str"
	android:textSize="20sp"
	android:layout_weight="1"
	android:gravity="center"/>
<View 
    android:layout_width="1dp"
    android:layout_height="match_parent"
    android:background="#ff000000"/>

<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/yellow_light_tv_str"
    android:textSize="20sp"
    android:layout_weight="1"
    android:gravity="center"/>

<View
    android:layout_width="1dp"
    android:layout_height="match_parent"
	android:background="#ff000000"/>

<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/green_light_tv_str"
    android:textSize="20sp"
    android:layout_weight="1"
    android:gravity="center"/>

<View
    android:layout_width="1dp"
    android:layout_height="match_parent"
	android:background="#ff000000"/>

</LinearLayout>

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="#ff000000" />

 <ListView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/list_view_light"
	 android:layout_marginLeft="10dp"
	 android:layout_marginRight="10dp"
	 android:divider="#ff000000"
	 android:dividerHeight="1dp">
</ListView>

<View
	android:layout_width="match_parent"
	android:layout_height="1dp"
	android:layout_marginLeft="10dp"
	android:layout_marginRight="10dp"
	android:background="#ff000000"/>
</LinearLayout>


